--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,14 @@
 spring.application.name=schedule-app
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:schedule-db
+spring.datasource.url=jdbc:h2:mem:schedule-db;MODE=MySQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=securepassword
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 # Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=false
+
